Commiting inital proj structure.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Dnc.BookStore/obj
+/Dnc.BookStore/.vs/Dnc.BookStore/v16
