--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Dnc.BookStore/.vs/Dnc.BookStore/v16
 /Dnc.BookStore/bin/Debug/netcoreapp3.1
 /Dnc.BookStore/.vs/Dnc.BookStore/config
+/Dnc.BookStore/.vs/Dnc.BookStore/DesignTimeBuild
