--- a/Dnc.BookStore/Dnc.BookStore.csproj
+++ b/Dnc.BookStore/Dnc.BookStore.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\book\gallery\" />
+    <Folder Include="wwwroot\images\book\pdfs\" />
+  </ItemGroup>
+
 </Project>
