Refactor code and remove duplicate code with partial views

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Dnc.BookStore/wwwroot/jquery-validate
 /Dnc.BookStore/wwwroot/lib/jquery-validate
 /Dnc.BookStore/wwwroot/lib/jquery-validation-unobtrusive
+/Dnc.BookStore/wwwroot/lib/jquery-ajax-unobtrusive
