--- a/Dnc.BookStore/appsettings.Production.json
+++ b/Dnc.BookStore/appsettings.Production.json
@@ -6,14 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "MySettings": {
-    "AppName": "Book Store - Dev"
+    "AppName": "Book Store - Prod"
   },
   "ConnectionStrings": {
     "BookStoreConn": "Data Source=LAPTOP-8AM6UCA4\\SQLEXPRESS;Initial Catalog=BookStore;Integrated Security=True;"
-  },
-  "NewBookAlert": {
-    "DisplayAlert": true,
-    "Message": "Coming Soon............. - Game of Throns"
   }
 }
