--- a/Dnc.BookStore/appsettings.json
+++ b/Dnc.BookStore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookStoreConn": "Data Source=LAPTOP-8AM6UCA4\\SQLEXPRESS;Initial Catalog=BookStore;Integrated Security=True;"
+  }
 }
